--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -9,7 +9,7 @@
         url(../images/titleOverlay.jpeg);
 }
 
-.hero__title {
+.main-title {
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
