--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -5,7 +5,7 @@
 }
 
 /*logo*/
-.web-logo {
+.web__logo {
     text-decoration: none;
     font-family: 'Raleway', sans-serif;
     font-size: 26px;
@@ -14,7 +14,7 @@
     color: var(--color-brand);
 }
 
-.studiologo-header {
+.studiologo__header {
     text-decoration: none;
     font-family: 'Raleway', sans-serif;
     font-size: 26px;
@@ -25,7 +25,7 @@
 }
 
 /*navi*/
-.link-nav {
+.link__nav {
     position: relative;
     transition: color;
     transition-duration: 250ms;
@@ -38,7 +38,7 @@
     color: var(--txtcolor-primary);
 }
 
-.link-nav--current::after {
+.link__nav--current::after {
     position: absolute;
     top: 46px;
     display: block;
@@ -50,14 +50,14 @@
     content: '';
 }
 
-.link-nav:hover,
-.link-nav:focus,
-.link-nav--current {
+.link__nav:hover,
+.link__nav:focus,
+.link__nav--current {
     color: var(--color-brand);
 }
 
 /*contact*/
-.link-contact {
+.link__contact {
     transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -72,18 +72,18 @@
 }
 
 /*header allignment*/
-.header-container {
+.header__container {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.header-nav {
+.header__nav {
     display: flex;
     align-items: center;
 }
 
-.site-nav {
+.navigation__links {
     display: flex;
     gap: 50px;
     margin-top: 32px;
@@ -95,19 +95,19 @@
     gap: 50px;
 }
 
-.contact-list {
+.contact__list {
     display: flex;
     align-items: center;
     flex-direction: row-reverse;
     gap: 10px;
 }
 
-.contact-icon {
+.contact__icon {
     fill: currentColor;
     margin-right: 10px;
 }
 
-.link-contact:hover,
-.link-contact:focus {
+.link__contact:hover,
+.link__contact:focus {
     color: var(--color-brand);
 }
