--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -5,7 +5,7 @@
 }
 
 /*logo*/
-.web__logo {
+.web-logo {
     text-decoration: none;
     font-family: 'Raleway', sans-serif;
     font-size: 26px;
@@ -14,7 +14,7 @@
     color: var(--color-brand);
 }
 
-.studiologo__header {
+.studiologo-header {
     text-decoration: none;
     font-family: 'Raleway', sans-serif;
     font-size: 26px;
@@ -25,7 +25,7 @@
 }
 
 /*navi*/
-.link__nav {
+.link-nav {
     position: relative;
     transition: color;
     transition-duration: 250ms;
@@ -38,7 +38,7 @@
     color: var(--txtcolor-primary);
 }
 
-.link__nav--current::after {
+.link-nav--current::after {
     position: absolute;
     top: 46px;
     display: block;
@@ -50,14 +50,14 @@
     content: '';
 }
 
-.link__nav:hover,
-.link__nav:focus,
-.link__nav--current {
+.link-nav:hover,
+.link-nav:focus,
+.link-nav--current {
     color: var(--color-brand);
 }
 
 /*contact*/
-.link__contact {
+.link-contact {
     transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -72,18 +72,18 @@
 }
 
 /*header allignment*/
-.header__container {
+.header-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.header__nav {
+.header-nav {
     display: flex;
     align-items: center;
 }
 
-.navigation__links {
+.site-nav {
     display: flex;
     gap: 50px;
     margin-top: 32px;
@@ -95,19 +95,19 @@
     gap: 50px;
 }
 
-.contact__list {
+.contact-list {
     display: flex;
     align-items: center;
     flex-direction: row-reverse;
     gap: 10px;
 }
 
-.contact__icon {
+.contact-icon {
     fill: currentColor;
     margin-right: 10px;
 }
 
-.link__contact:hover,
-.link__contact:focus {
+.link-contact:hover,
+.link-contact:focus {
     color: var(--color-brand);
 }
