--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -5,7 +5,7 @@
 }
 
 /*logo*/
-.web__logo {
+.web-logo {
     text-decoration: none;
     font-family: 'Raleway', sans-serif;
     font-size: 26px;
@@ -95,7 +95,7 @@
     gap: 50px;
 }
 
-.contact__list {
+.contact__item {
     display: flex;
     align-items: center;
     flex-direction: row-reverse;
