--- a/scss/components/_whatwe-do.scss
+++ b/scss/components/_whatwe-do.scss
@@ -1,8 +1,8 @@
-.whatwe-do {
+.whatwe__do {
     padding-top: 0;
 }
 
-.title-whatwe-do {
+.title__whatwe-do {
     font-size: 36px;
     line-height: 1.16;
     text-align: center;
@@ -10,17 +10,17 @@
     color: var(--txtcolor-primary);
 }
 
-.picsof-whatwe-do {
+.picsof__whatwe-do {
     display: flex;
     gap: 30px;
     margin-top: 50px;
 }
 
-.description-list {
+.description__list {
     position: relative;
 }
 
-.picture-description {
+.picture__description {
     font-size: 14px;
     font-weight: 700;
     line-height: 1.14;
