--- a/scss/components/_benefits.scss
+++ b/scss/components/_benefits.scss
@@ -1,4 +1,4 @@
-.benefits {
+.benefit {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
@@ -7,7 +7,7 @@
     margin-top: 30px;
 }
 
-.benefits-description {
+.benefits__description {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
@@ -16,17 +16,17 @@
     margin-bottom: 0px;
 }
 
-.listof-benefits {
+.listof__benefits {
     display: flex;
     justify-content: center;
     gap: 30px;
 }
 
-.listof-benefits .list {
+.listof__benefits .list {
     width: 270px;
 }
 
-.design-boxes {
+.design__boxes {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -35,7 +35,7 @@
     border-radius: 4px;
 }
 
-.benefits-icon {
+.inbox__icon {
     width: 70px;
     height: 70px;
 }
