--- a/scss/components/_clients.scss
+++ b/scss/components/_clients.scss
@@ -1,18 +1,18 @@
-.clients-title {
+.clients__title {
     font-size: 36px;
     line-height: 1.16;
     text-align: center;
     letter-spacing: 0.03em;
 }
 
-.clients-list {
+.clients__list {
     display: flex;
     justify-content: center;
     gap: 30px;
     margin-top: 50px;
 }
 
-.clients-link {
+.clients__link {
     transition-property: color, border;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -26,14 +26,14 @@
     border-radius: 4px;
 }
 
-.clients-logo {
+.clients__logo {
     width: 106px;
     height: 60px;
     fill: currentColor;
 }
 
-.clients-link:hover,
-.clients-link:focus {
+.clients__link:hover,
+.clients__link:focus {
     color: var(--color-brand);
     border: 1px solid var(--color-brand);
 }
