--- a/scss/components/_portfolio-buttons.scss
+++ b/scss/components/_portfolio-buttons.scss
@@ -4,7 +4,7 @@
     gap: 8px;
 }
 
-.filter-button {
+.filter__button {
     transition-property: color, background-color, box-shadow;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -21,8 +21,8 @@
     border: none;
 }
 
-.filter-button:hover,
-.filter-button:focus {
+.filter__button:hover,
+.filter__button:focus {
     color: #FFFFFF;
     background-color: var(--color-brand);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
