--- a/scss/components/_projects.scss
+++ b/scss/components/_projects.scss
@@ -1,29 +1,29 @@
-.project-cards {
+.project__cards {
     display: flex;
     flex-wrap: wrap;
     margin-top: 50px;
     gap: 30px;
 }
 
-.overlay-wrapper {
+.overlay__wrapper {
     position: relative;
     overflow: hidden;
 }
 
-.project-wrapper {
+.project__wrapper {
     border: 1px solid #EEEEEE;
     border-top: none;
     padding: 20px 24px;
 }
 
-.project-name {
+.project__name {
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
     color: var(--txtcolor-primary);
 }
 
-.project-type {
+.project__type {
     font-size: 16px;
     line-height: 1.86;
     letter-spacing: 0.03em;
@@ -42,7 +42,7 @@
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.upsliding-window {
+.upsliding__window {
     position: absolute;
     top: 0;
     left: 0;
@@ -58,13 +58,13 @@
     background-color: rgba(33, 150, 243, 0.9);
 }
 
-.text-inwindow {
+.text__inwindow {
     font-size: 18px;
     line-height: 1.56;
     letter-spacing: 0.03em;
     color: #FFFFFF;
 }
 
-.boxes:hover .upsliding-window {
+.boxes:hover .upsliding__window {
     transform: translateY(0);
 }
