--- a/scss/components/_team.scss
+++ b/scss/components/_team.scss
@@ -7,13 +7,13 @@
     gap: 30px;
 }
 
-.people-cards {
+.people__cards {
     background-color: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 }
 
-.team-title {
+.team__title {
     font-size: 36px;
     line-height: 1.16;
     text-align: center;
@@ -22,11 +22,11 @@
     margin-bottom: 50px;
 }
 
-.team-wrapper {
+.team__wrapper {
     padding: 30px 0;
 }
 
-.people-names {
+.people__names {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
@@ -45,14 +45,14 @@
 }
 
 /*social media links*/
-.social-list {
+.social__list {
     display: flex;
     justify-content: center;
     margin-top: 16px;
     gap: 10px;
 }
 
-.social-link {
+.social__link {
     transition-property: color, background-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -65,12 +65,12 @@
     color: #AFB1B8;
 }
 
-.social-link:hover,
-.social-link:focus {
+.social__link:hover,
+.social__link:focus {
     color: #FFFFFF;
     background-color: var(--color-brand);
 }
 
-.social-icon {
+.social__icon {
     fill: currentColor;
 }
